# kubernetes-storage-dashboard-grafana

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
dashboards/: appmana-categories.json  default-categories.json  render.py  storage-usage-legacy.json  storage-usage.json  storage-usage.tmpl.json
deploy/helm/kubernetes-storage-dashboard-grafana/: Chart.yaml  values.yaml
deploy/helm/kubernetes-storage-dashboard-grafana/files/: storage-usage-legacy.tmpl.json
deploy/helm/kubernetes-storage-dashboard-grafana/templates/: NOTES.txt  _helpers.tpl  configmap-config.yaml  configmap-dashboard.yaml  configmap-plugins.yaml  daemonset.yaml  longhorn-servicemonitor.yaml  rbac.yaml  service.yaml  (+2 more)
deploy/kustomize/: install.yaml  kustomization.yaml
examples/: appmana.yaml
exporter/: __main__.py  config.py  defaults.yaml  plugin_loader.py  server.py  utils.py
exporter/categories/: __init__.py  apt_cache.py  base.py  buildkit.py  containerd_images.py  crash_dumps.py  dockerd.py  filesystem.py  fscache.py  home.py  journald.py  local_path_provisioner.py  pod_ephemeral.py  snap.py  swap.py
panel-plugin/: CHANGELOG.md  LICENSE  README.md  package.json
panel-plugin/.config/: docker-compose-base.yaml
panel-plugin/src/: module.ts  plugin.json  transform.test.ts  transform.ts  types.ts
panel-plugin/src/components/: DiskRow.test.tsx  DiskRow.tsx  Legend.test.tsx  Legend.tsx  StorageBreakdownPanel.test.tsx  StorageBreakdownPanel.tsx
tests/: test_categories.py  test_config.py  test_plugin_loader.py  test_server.py
