[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubernetes-storage-dashboard-grafana-exporter"
version = "0.1.0"
description = "Per-node storage breakdown exporter for Kubernetes (Prometheus + Grafana)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "AppMana" }]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-pyyaml>=6.0",
]

[project.scripts]
storage-exporter = "exporter.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["exporter"]

[tool.hatch.build.targets.wheel.force-include]
"exporter/defaults.yaml" = "exporter/defaults.yaml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
